--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Dhanush</h1>
-												<p><a class="btn btn-primary btn-learn" href="https://www.figma.com/file/Wmv23Uswvh6kOI74GxGrrc/Untitled?type=design&node-id=5%3A50&mode=design&t=IxyTcHLXksIRB50G-1">Download CV <i class="icon-download4"></i></a></p>
+												<p><a class="btn btn-primary btn-learn" href="./res/index.html" target="__blank">Download CV <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
