--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 					</div>
 					<div class="row">
 						<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-							<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
+							<p>As a front-end developer adept in jQuery, React, Angular, and Android Studio, I excel in crafting intuitive user interfaces and seamless interactions. Leveraging cutting-edge web technologies, I create responsive applications across platforms..</p>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
